@@ -1,6 +1,6 @@
 [comment {-*- tcl -*- --- doctools ---}]
 [vset PACKAGE iban]
-[vset VERSION 1.3]
+[vset VERSION 1.4]
 [vset A an]
 [vset NAME IBAN]
 [vset NAMEX {International Bank Account Number}]
