@@ -33,7 +33,7 @@ snit::type ::valtype::iban {
 	FR 27 GF 27 GP 27 MQ 27 RE 27 PF 27 TF 27 YT 27 NC 27 PM 27 WF 27 GE 22 DE 22 GI 23 GR 27 HU 28
 	IS 26 IE 22 IL 23 IT 27 KZ 20 KW 30 LV 21 LB 28 LI 21 LT 20 LU 20 MK 19 MT 31 MR 27 MU 30 MC 27
 	ME 22 NL 18 NO 15 PL 28 PS 29 PT 25 RO 24 SM 27 SA 24 RS 22 SK 24 SI 19 ES 24 SE 24 CH 21 TN 24 TR 26
-	AE 23 GB 22 AZ 28 MD 24 PK 24 VG 24 GT 28 QA 29
+	AE 23 GB 22 AZ 28 MD 24 PK 24 VG 24 GT 28 QA 29 JO 30
     }
 
     typevariable charmap {
@@ -88,4 +88,4 @@ snit::type ::valtype::iban {
 # # ## ### ##### ######## ############# ######################
 ## Ready
 
-package provide valtype::iban 1.3
+package provide valtype::iban 1.4
