@@ -69,6 +69,7 @@ foreach iban {
     IL620108000000099999999
     IS140159260076545510730339
     IT60X0542811101000000123456
+    JO94CBJO0010000000000131000302
     KW81CBKU0000000000001234560101
     KZ86125KZT5004100100
     LB62099900000001001901229114
