@@ -1,3 +1,10 @@
+2014-01-21  Andreas Kupries  <andreask@activestate.com>
+
+	* iban.tcl: Ticket [9318a6687f]: Applied patch by Max
+	* iban.test: Jarek to update the code to the IBAN Registry
+	* iban.man: version 47. Bumped package version to 1.4.
+	* pkgIndex.tcl:
+
 2013-10-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* iban.tcl: Ticket [a3dd326ec8]: Applied patch by Max
